--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@oframe/animate": "^1.1.4",
     "gsap": "^3.12.5",
     "lenis": "^1.1.14",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
